fix mobile burger display out of the screen

--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,7 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding: 0 13px;
   }
   .navbar .nav-links {
     position: absolute;
